<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.sid.nike.activity.MainActivity">

    <item android:id="@+id/menu_main_search"
          android:title="@string/action_search"
          android:icon="@drawable/ic_search"
          app:showAsAction="always|collapseActionView"
          app:actionViewClass="androidx.appcompat.widget.SearchView"/>
</menu>
