<resources>
    <string name="app_name">Glossary</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_search_hint">Please enter a word</string>
    <string name="sample_definition_example">1. the main cause of [explosions].2. any thing [dreaded] that your teachers say is good for you. soon after, you explode for</string>
    <string name="sample_definition_meaning">Some Meaning</string>
    <string name="no_data_available">No Data Available</string>
    <string name="cannot_find_term">No data found for \'$1%s\'</string>
</resources>
